Tests/ModulesExampleDirectory/InvalidModuleExample/ModuleInvalidContainsMultipleClassAndDoesNotHaveParentClass.php
<?php
/**
 * Class ModuleInvalidContainsMultipleClassAndDoesNotHaveParentClass
 */
class ModuleInvalidContainsMultipleClassAndDoesNotHaveParentClass
{
}

class ThisIsAlsoClass extends \stdClass
{
}
